# cryopicls

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
cryopicls/: __init__.py  cryopicls_autorefine_cryosparc.py  cryopicls_clustering.py  cryopicls_projector.py  cryopicls_visualizer.py  utils.py
cryopicls/args/: __init__.py  autorefine_cryosparc.py  clustering.py  projector.py
cryopicls/autorefine/: __init__.py  cryosparc.py
cryopicls/clustering/: __init__.py  autogmm.py  gmeans.py  kmeans.py  manual_select.py  utils.py  xmeans.py
cryopicls/data_handling/: __init__.py  cryodrgn.py  cryosparc.py
tests/: cryodrgn_z_p2_w1_j744_vae128_zdim3_seed1.pkl  cryosparc_P2_J744_005_particles_pyem.star  cryosparc_P2_J744_005_particles_pyem.star.org  test_clustering_algorithms.py  test_clustering_main.py  test_cryopicls.py  test_projector_main.py  z_dummy_5class.pkl  z_dummy_5class_labels.pkl
tests/cryosparc_autorefine/: cryopicls_cluster000_particles.cs  cryopicls_cluster000_particles.csg  cryopicls_cluster000_passthrough_particles.cs  cryopicls_cluster001_particles.cs  cryopicls_cluster001_particles.csg  cryopicls_cluster001_passthrough_particles.cs
tests/cryosparc_consensus/: P2_J744_particles.csg  P2_J744_passthrough_particles.cs  cryosparc_P2_J744_000_particles.cs  cryosparc_P2_J744_001_particles.cs  cryosparc_P2_J744_002_particles.cs  cryosparc_P2_J744_003_particles.cs  cryosparc_P2_J744_004_particles.cs  cryosparc_P2_J744_005_particles.cs
tests/cryosparc_threedvar/: P2_J809_particles.csg  cryosparc_P2_J809_component_0.cs  (+9 more)
